# italinix

./: .gitignore  README.md
backend/: main.py  pyproject.toml  seed_menu.py
backend/core/: security.py
backend/database/: db.py
backend/dependencies/: auth.py
backend/models/: all_models.py  category.py  ingredient.py  location.py  order.py  order_item.py  order_item_ingredient.py  product.py  product_ingredient.py  shipping.py  user.py
backend/routers/: auth_router.py  category_router.py  ingredient_router.py  location_router.py  order_router.py  product_router.py  shipping_router.py  user_router.py
backend/schemas/: auth.py  category.py  ingredient.py  location.py  order.py  order_item.py  order_item_ingredient.py  product.py  shipping.py  user.py
backend/services/: auth_service.py  category_service.py  ingredient_service.py  location_service.py  order_service.py  product_service.py  shipping_service.py  user_service.py
backend/tests/: conftest.py  test_integration_crud.py
frontend/: README.md  index.html  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/layout/: AppShell.css  AppShell.tsx  Footer.css  Footer.tsx  Header.css  Header.tsx  PublicTopbar.css  PublicTopbar.tsx  SectionHeader.css  SectionHeader.tsx  icons.tsx
frontend/src/components/ui/: Badge.css  Badge.tsx  Drawer.css  Drawer.tsx  EmptyState.css  EmptyState.tsx
frontend/src/features/admin/: AdminDashboard.css  AdminDashboard.tsx
frontend/src/features/auth/: AccessDenied.tsx  AuthProvider.tsx  LoginPage.css  (+8 more)
frontend/src/lib/: api.ts
(+39 files in other folders)
